--- a/src/features/Auth/Auth.css
+++ b/src/features/Auth/Auth.css
@@ -53,7 +53,7 @@ form {
     padding: 0.6rem 0.4rem;
     color: var(--light);
     font-family: var(--font-orbitron);
-    font-size: clamp(0.45rem, 0.9vw, 0.65rem);
+    font-size: clamp(0.5rem, 0.9vw, 0.65rem);
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 0.12em;
