--- a/src/features/StarShips/components/FilmCard/FilmCard.css
+++ b/src/features/StarShips/components/FilmCard/FilmCard.css
@@ -124,7 +124,7 @@
 
 h4 {
     font-family: var(--font-orbitron);
-    font-size: clamp(0.35rem, 0.8vw, 0.7rem);
+    font-size: clamp(0.5rem, 0.8vw, 0.7rem);
     color: var(--color-light);
     text-transform: uppercase;
     letter-spacing: 0.08em;
